tests/snapshots/examples_basics/higher_order_builtins.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/higher_order_builtins.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `any`.

  examples/basics/higher_order_builtins.flx:12:11
   |
12 |     print(any(nums, /x -> x > 3))
   |           ^^^

Hint:
  Define it first: let any = ...;


error[E004]: Undefined Variable

I can't find a value named `any`.

  examples/basics/higher_order_builtins.flx:13:11
   |
13 |     print(any(nums, /x -> x > 10))
   |           ^^^

Hint:
  Define it first: let any = ...;


error[E004]: Undefined Variable

I can't find a value named `any`.

  examples/basics/higher_order_builtins.flx:14:11
   |
14 |     print(any([||], /x -> true))
   |           ^^^

Hint:
  Define it first: let any = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/basics/higher_order_builtins.flx:20:11
   |
20 |     print(all(nums, /x -> x > 0))
   |           ^^^

Hint:
  Define it first: let all = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/basics/higher_order_builtins.flx:21:11
   |
21 |     print(all(nums, /x -> x > 3))
   |           ^^^

Hint:
  Define it first: let all = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/basics/higher_order_builtins.flx:22:11
   |
22 |     print(all([||], /x -> false))
   |           ^^^

Hint:
  Define it first: let all = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/basics/higher_order_builtins.flx:28:11
   |
28 |     print(find(nums, /x -> x > 3))
   |           ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/basics/higher_order_builtins.flx:29:11
   |
29 |     print(find(words, /w -> len(w) == 3))
   |           ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/basics/higher_order_builtins.flx:30:11
   |
30 |     print(find(nums, /x -> x > 100))
   |           ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/basics/higher_order_builtins.flx:33:18
   |
33 |     let result = find(words, /w -> starts_with(w, "a"))
   |                  ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `sort_by`.

  examples/basics/higher_order_builtins.flx:45:11
   |
45 |     print(sort_by(words, /w -> len(w)))
   |           ^^^^^^^

Hint:
  Define it first: let sort_by = ...;


error[E004]: Undefined Variable

I can't find a value named `sort_by`.

  examples/basics/higher_order_builtins.flx:48:11
   |
48 |     print(sort_by(nums, /x -> 0 - x))
   |           ^^^^^^^

Hint:
  Define it first: let sort_by = ...;


error[E004]: Undefined Variable

I can't find a value named `sort_by`.

  examples/basics/higher_order_builtins.flx:52:18
   |
52 |     let by_age = sort_by(people, /p -> p.1)
   |                  ^^^^^^^

Hint:
  Define it first: let sort_by = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/basics/higher_order_builtins.flx:53:11
   |
53 |     print(map(by_age, /p -> p.0))
   |           ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `zip`.

  examples/basics/higher_order_builtins.flx:62:11
   |
62 |     print(zip(zk, zv))
   |           ^^^

Hint:
  Define it first: let zip = ...;


error[E004]: Undefined Variable

I can't find a value named `zip`.

  examples/basics/higher_order_builtins.flx:65:11
   |
65 |     print(zip([|1, 2, 3|], [|"x", "y"|]))
   |           ^^^

Hint:
  Define it first: let zip = ...;


error[E004]: Undefined Variable

I can't find a value named `zip`.

  examples/basics/higher_order_builtins.flx:68:19
   |
68 |     let lengths = zip(words, map(words, /w -> len(w)))
   |                   ^^^

Hint:
  Define it first: let zip = ...;


error[E004]: Undefined Variable

I can't find a value named `flatten`.

  examples/basics/higher_order_builtins.flx:76:11
   |
76 |     print(flatten(nested))
   |           ^^^^^^^

Hint:
  Define it first: let flatten = ...;


error[E004]: Undefined Variable

I can't find a value named `flatten`.

  examples/basics/higher_order_builtins.flx:80:21
   |
80 |     let all_words = flatten(map(sentences, /s -> split(s, " ")))
   |                     ^^^^^^^

Hint:
  Define it first: let flatten = ...;


error[E004]: Undefined Variable

I can't find a value named `flatten`.

  examples/basics/higher_order_builtins.flx:84:11
   |
84 |     print(flatten([|[|1|], [||], [|2|]|]))
   |           ^^^^^^^

Hint:
  Define it first: let flatten = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/basics/higher_order_builtins.flx:90:11
   |
90 |     print(count(nums, /x -> x % 2 == 0))
   |           ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/basics/higher_order_builtins.flx:91:11
   |
91 |     print(count(evens, /x -> x > 4))
   |           ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/basics/higher_order_builtins.flx:92:11
   |
92 |     print(count([||], /x -> true))
   |           ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/basics/higher_order_builtins.flx:95:11
   |
95 |     print(count(words, /w -> len(w) > 4))
   |           ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/basics/higher_order_builtins.flx:102:19
    |
102 |     let longest = find(sort_by(words, /w -> 0 - len(w)), /_ -> true)
    |                   ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/basics/higher_order_builtins.flx:106:21
    |
106 |     let evens_gt2 = count(filter(nums, /x -> x > 2), /x -> x % 2 == 0)
    |                     ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `zip`.

  examples/basics/higher_order_builtins.flx:110:17
    |
110 |     let pairs = zip([|"a", "b", "c", "d"|], [|1, 2, 3, 4|])
    |                 ^^^

Hint:
  Define it first: let zip = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/basics/higher_order_builtins.flx:111:22
    |
111 |     let even_pairs = filter(pairs, /p -> p.1 % 2 == 0)
    |                      ^^^^^^

Hint:
  Define it first: let filter = ...;

Found 28 errors.
== stdout ==
<not executed>
